Bug 1445670.  Make sure to clear out the pending request when our image gets blocked by the data document policy.  r=jdm